[package]
name = "routecore"
version = "0.4.0-dev"
authors = ["NLnet Labs <rpki-team@nlnetlabs.nl>"]
categories = ["network-programming"]
description = "A Library with Building Blocks for BGP Routing"
documentation = "https://docs.rs/routecore/"
edition = "2021"
rust-version = "1.71"
keywords = ["routing", "bgp"]
license = "BSD-3-Clause"

[dependencies]
# Optional dependencies which, if included, introduce additional functionality.
arbitrary = { version = "1", optional = true, features = ["derive"] }
#bcder = { version = "0.7", optional = true }
bytes       = { version = "1", optional = true }
chrono      = { version = "0.4.20", optional = true }
const-str   = { version = "0.5", optional = true, features = ["case"] }
log         = { version = "0.4.4", optional = true }
octseq      = { version = "0.3.1", features = ["bytes"], optional = true }
serde       = { version = "1.0.103", optional = true, features = ["derive"] }
tokio       = { version = "1", features = ["sync", "rt"], optional = true }

[dev-dependencies]
serde_test      = "1.0"
memmap2         = "0.6"

[features]
default = []
bgp = ["bytes", "log", "octseq", "const-str"]
bmp = ["bgp", "chrono"]
