[package]
name = "routecore"
version = "0.5.1-dev"
authors = ["NLnet Labs <routing-team@nlnetlabs.nl>"]
categories = ["network-programming"]
description = "A Library with Building Blocks for BGP Routing"
documentation = "https://docs.rs/routecore/"
repository = "https://github.com/NLnetLabs/routecore"
edition = "2021"
rust-version = "1.76"
keywords = ["routing", "bgp"]
license = "BSD-3-Clause"

[dependencies]
inetnum     = { version = "0.1.1", features = ["arbitrary", "serde"] }
arbitrary   = { version = "1.3.1", optional = true, features = ["derive"] }
bytes       = { version = "1.2", optional = true }
chrono      = { version = "0.4.20", optional = true, default-features = false }
const-str   = { version = "0.5", optional = true, features = ["case"] }
log         = { version = "0.4.4", optional = true }
octseq      = { version = "0.4.0", optional = true, features = ["bytes"] }
paste       = { version = "1" }
serde       = { version = "1.0.165", optional = true, features = ["derive"] }
tokio       = { version = ">=1.24.2", optional = true, features = ["io-util", "macros", "net", "sync", "rt-multi-thread", "time"] }
rayon       = { version = "1.10", optional = true }

[dev-dependencies]
memmap2         = "0.9"
serde_test      = "1"

[features]
default = ["bgp"]
bgp = ["bytes", "log", "octseq", "const-str"]
bmp = ["bgp", "chrono"]
fsm = ["tokio"]
mrt = ["bgp", "fsm", "rayon", "serde"]
bgpsec = []

