[package]
name = "routecore-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.routecore]
path = ".."
features = [ "arbitrary", "bmp" ]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "parse_bmp_message"
path = "fuzz_targets/parse_bmp_message.rs"
test = false
doc = false


[[bin]]
name = "parse_bgp_message"
path = "fuzz_targets/parse_bgp_message.rs"
test = false
doc = false

[[bin]]
name = "parse_update_message"
path = "fuzz_targets/parse_update_message.rs"
test = false
doc = false

[[bin]]
name = "parse_open_message"
path = "fuzz_targets/parse_open_message.rs"
test = false
doc = false

[[bin]]
name = "nlri_ord"
path = "fuzz_targets/nlri_ord.rs"
test = false
doc = false

[[bin]]
name = "path_selection"
path = "fuzz_targets/path_selection.rs"
test = false
doc = false
